--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 html {
-    /*background-color:crimson;*/
 	background-color: indianred;
     opacity:0.9;
 }
@@ -15,13 +14,11 @@ html {
 
 body {
 	margin : auto;
-	/*background-color : rgb(212, 155, 81);*/
 	height : auto;
 }
 
 header {
 	margin : auto;
-	/*background-color:  rgb(140, 140, 255);*/
 }
 
 h1 {
@@ -31,25 +28,32 @@ h1 {
 }
 
 h2,h3,h4 {
+    text-transform: capitalize;
 	text-align: center;
 	padding-top : 10px;
 	padding-bottom : 10px;
 	font-family:"Merriweather";
 }
 
+h5 {
+    text-transform: capitalize;
+    width: 90%;
+    text-align: left;
+    margin-left: 10%;
+    font-size:14px;
+    font-weight:700;
+}
 
 nav {
     display:flex;
     flex-direction:row;
     border:solid;
     border-width:0.2px;
-
 }
 
 nav>a {
 	width: 25%;
     height:80px;
-    /*background-color:white;*/
     border:solid;
     border-width:0.2px;
     padding-top:30px;
@@ -57,72 +61,92 @@ nav>a {
     text-align:center;
     font-size:20px;
     text-decoration:none;
-    /*opacity:0.9; */
  }
 
 nav>a:hover{
 	background-color:gray;
 }
 
-
 section {
-	border:solid;
     border-width:0.0px;
     text-align:center;
 }
 
+article {
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+    border:solid;
+    border-width:0.1px;
+}
 
 aside {
-    width:50%;
+    width:100%;
     height:100px;
     text-align:center;
-	border:solid;
-    border-width:0.2px;
     display:block;
     margin-left:auto;
     margin-right:auto;
     height:auto;
 }
 
-aside>p {
+aside > div {
+    width:20%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:40px;
     border:solid;
-    border-width:0px;
+    border-color: ivory;
+    border-width:1px;
+}
+
+aside > ul {
+    width: 90%;
+    margin-left:5.5%;
+    list-style-type: none;
+}
+
+aside > ul > li  {
+    background-color: rgb(165, 42, 42,0.5);
+    text-align:left;
+    /*top right bottom left */
+    border:solid;
+    border-style:dashed;
+    border-radius: 20px;
+    border-width: 0.15px;
+    margin:  4px 0px  4px 0px; 
+    padding: 5px 10px 5px 10px;
+}
+
+aside > ul.details {
+    width: 35%;
+}
+
+aside>p {
+    width:82%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    border:solid;
+    border-style:groove; /*dashed or groove*/
+    border-radius: 20px;
+    border-width: 1px;
+    padding: 7px 10px 7px 10px;
 }
 
 #A1 img, #A2 img {
 	width: 80%;
 	height: 80%;
-	/*width:auto;
-	height:auto;*/
 }
-
- 
 
 #A3 img {
     width:140px;
     height:140px;
 }
 
-
-
-
-div {
-
-}
-
-
-p {
-
-}
-
-span {
-
-}
-
 form {
-    /*background-color:lightgray;*/
 	width:50%;
-    /*opacity:0.9;*/
 	border:solid;
 	text-align:center;
     border-width:0.2px;
@@ -170,18 +194,14 @@ form button {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    /*color:rgb(0, 0, 0);*/
 	font-size: 18px;
     height: 40px;
 	width:auto;  
 	font-weight: bold;
+    cursor:pointer;
 }
 
-
-
-
 #top {
-    /*display:"none";*/
     flex-direction:row;
     border:solid;
     border-width:0.0px;
@@ -220,7 +240,6 @@ form button {
 }
 
 footer  {
-    /*background-color:lightblue;*/
     text-align:center;
     height:auto;
 	margin-top: 10px;
@@ -236,11 +255,76 @@ a {
     z-index:auto;
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:1800px) {
+    article {
+        width:50%;
+    }
+}
+
+@media screen and (max-width:1500px) {
+    article {
+        width:60%;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    article {
+        width:70%;
+    }
+    form div {
+        width:100%;
+        margin-top:10px;
+        margin-bottom:10px;
+        display:flex;
+        flex-direction:column;
+    }
+
+    div label {
+        float:none;
+        margin-left:0px;
+        margin-right:0px;
+        width:auto;
+    }
+    form textarea {
+        width:100%;
+    }
+}
+
+@media screen and (max-width:800px) {
 	nav {
         flex-direction:column;
     }
     nav>a{
         width:100%;
+    }
+
+    article {
+        width:100%;
+    }
+
+    aside > ul {
+        width: 90%;
+        display:block;
+        margin-left:auto;
+        margin-right:auto;
+
+        list-style-type: none;
+    }
+    h5 {
+        width:100%;
+        margin-left:auto;
+        text-align:center;
+    }
+
+   
+    ul.details {
+        width:100%;
+        display:block;
+        margin-left:29%;
+        margin-right:auto;
+        text-align:left;
+    }
+    ul.details > li{
+        text-align:center;
     }
 }
