--- a/style.css
+++ b/style.css
@@ -150,6 +150,8 @@ form {
     margin-left:auto;
     margin-right:auto;
     height:auto;
+    /*visibility: hidden;*/
+    /*display:none; better than visibility;hidden*/
 }
 
 fieldset {
