--- a/style.css
+++ b/style.css
@@ -390,8 +390,8 @@ a {
     aside > ul {
         width: 90%;
         display:block;
-        margin-left:auto;
-        margin-right:auto;
+        margin-left:2px;
+        /*margin-right:auto;*/
 
         list-style-type: none;
     }
@@ -403,20 +403,20 @@ a {
     }
 
     aside > ul.details {
-        width: 45%;
+        width: 90%;
         display:block;
         /*align-items: center;*/
-        margin-left:5.5%;
+        margin-left:2px;
         margin-right:auto;
         text-align:center;
     }
 
-    ul.details > li{
+    ul.details > li {
         text-align:left;
     }
 
     form {
-        width:80%;
+        width:100%;
     }
     form div {
         margin-top:2px;
